--- a/css/main.css
+++ b/css/main.css
@@ -1861,6 +1861,7 @@ section {
 
 @media (max-width: 767.8px) {
   #section-2 .container .form {
+    gap: 20px;
     flex-direction: column;
     padding: 18px 20px;
     margin-bottom: 100px;
@@ -1907,7 +1908,7 @@ section {
 }
 
 @media (max-width: 767.8px) {
-  #section-2 .container .form input:first-child {
+  #section-2 .container .form input {
     border-bottom: 1px solid #4a4a4d;
   }
 }
@@ -1938,6 +1939,7 @@ section {
 
 @media (max-width: 767.8px) {
   #section-2 .container .form input {
+    border-bottom: 1px solid #4a4a4d !important;
     width: 100%;
     border: none;
   }
@@ -2021,7 +2023,7 @@ section {
   display: none;
 }
 
-@media (max-width: 479.8px) {
+@media (max-width: 1023.8px) {
   #section-3 .container .slider-bullets .bullet[data-bullet-index='3'] {
     display: block;
   }
@@ -2041,6 +2043,7 @@ section {
     height: 500px;
     background: transparent;
     z-index: -1;
+    padding: 0 0 0 25px;
   }
 }
 
@@ -2317,6 +2320,7 @@ section {
 @media (max-width: 767.8px) {
   #section-4 .container .form {
     flex-direction: column;
+    padding-bottom: 120px;
     height: 122px;
   }
 }
@@ -2388,8 +2392,9 @@ section {
 
 @media (max-width: 767.8px) {
   #section-4 .container .form .form__input {
+    margin-top: 10px;
     padding: 13px 5px;
-    border-top: 1px solid #4a4a4d;
+    border-bottom: 1px solid #4a4a4d;
   }
 }
 
@@ -2420,7 +2425,7 @@ section {
 @media (max-width: 767.8px) {
   #section-4 .container .form input[type='submit'] {
     position: relative;
-    top: 25px;
+    top: 45px;
     max-width: 400px;
     width: 100%;
     min-width: 400px;
@@ -3334,7 +3339,8 @@ section {
 
 @media (min-width: 480px) and (max-width: 767.8px) {
   .sm\:w-sm {
-    width: 400px;
+    width: 480px;
+    padding: 0 15px;
   }
 }
 
